# JavaCodeMigrator

./: .gitignore  .pre-commit-config.yaml  README.md  config.ini  pyproject.toml
output/: migration_plan.md
resources/output_templates/: migration_plan.md.j2
resources/prompts_templates/: analyze_java_file.prompt  create_application_overview.prompt  create_implementation_plan.prompt  create_mongodb_schema.prompt  migrate_file.prompt
src/: main.py
src/model/: llm_response_models.py  util_data_classes.py
src/service/: migration_planner.py
src/util/: config.py  log_manager.py  md_utils.py
tests/: conftest.py  test_migration_planner.py
